# unix-project

./: .editorconfig  .gitignore  CMakeLists.txt
src/: data-sender.c  data-sender256kb.c  data-sender64kb.c  data-validator.c  packet.c
src/basic/: client.c  server.c
src/client-oriented/: client.c  server.c
src/prototypes/basic/: client.c
src/server-oriented/: client.c  client256kb.c  server.c  server256kb.c
